--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
             <nav class="menu">
                 <ul class="menu-list">
                     <li class="menu-item">
-                        <a href="#">Почему у нас</a>
+                        <a data-link="why">Почему у нас</a>
                     </li>
                     <li class="menu-item">
-                        <a href="#">Меню бургеров</a>
+                        <a data-link="products">Меню бургеров</a>
                     </li>
                     <li class="menu-item">
-                        <a href="#">Оформление заказа</a>
+                        <a data-link="order">Оформление заказа</a>
                     </li>
                 </ul>
             </nav>
-            <div class="currency" title="Change currency">$</div>
+            <div class="currency" title="Change currency" id="change-currency">$</div>
         </div>
     </header>
 
@@ -39,14 +39,15 @@
                     бургеров. Готовим для вас лучшие бургеры в городе из отборной мраморной говядины.
                 </p>
                 <div class="main-action">
-                    <button class="button">Смотреть меню</button>
+                    <button class="button" id="main-action-button">Смотреть меню</button>
                 </div>
             </div>
             <img src="images/main_burger.png" alt="Big burger" class="main-image">
         </div>
     </section>
 </section>
-<section class="why">
+
+<section class="why" id="why">
     <div class="container">
         <div class="why-title common-title">почему нас выбирают?</div>
         <div class="why-items">
@@ -75,7 +76,7 @@
     </div>
 </section>
 
-<section class="products">
+<section class="products" id="products">
     <div class="container">
         <div class="product-title common-title">выберите свой бургер</div>
         <div class="products-items">
@@ -90,7 +91,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">8 $</div>
+                        <div class="products-item-price" data-base-price="8">8 $</div>
                         <div class="products-item-weight">360 g</div>
                     </div>
                     <div class="products-item-action">
@@ -118,7 +119,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">7 $</div>
+                        <div class="products-item-price" data-base-price="7">7 $</div>
                         <div class="products-item-weight">390 g</div>
                     </div>
                     <div class="products-item-action">
@@ -146,7 +147,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">10 $</div>
+                        <div class="products-item-price" data-base-price="10">10 $</div>
                         <div class="products-item-weight">420 g</div>
                     </div>
                     <div class="products-item-action">
@@ -174,7 +175,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">7 $</div>
+                        <div class="products-item-price" data-base-price="7">7 $</div>
                         <div class="products-item-weight">220 g</div>
                     </div>
                     <div class="products-item-action">
@@ -202,7 +203,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">8 $</div>
+                        <div class="products-item-price" data-base-price="8">8 $</div>
                         <div class="products-item-weight">220 g</div>
                     </div>
                     <div class="products-item-action">
@@ -230,7 +231,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">9 $</div>
+                        <div class="products-item-price" data-base-price="9">9 $</div>
                         <div class="products-item-weight">320 g</div>
                     </div>
                     <div class="products-item-action">
@@ -257,7 +258,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">8 $</div>
+                        <div class="products-item-price" data-base-price="8">8 $</div>
                         <div class="products-item-weight">280 g</div>
                     </div>
                     <div class="products-item-action">
@@ -284,7 +285,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">7 $</div>
+                        <div class="products-item-price" data-base-price="7">7 $</div>
                         <div class="products-item-weight">380 g</div>
                     </div>
                     <div class="products-item-action">
@@ -311,7 +312,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">11 $</div>
+                        <div class="products-item-price" data-base-price="11">11 $</div>
                         <div class="products-item-weight">400 g</div>
                     </div>
                     <div class="products-item-action">
@@ -338,7 +339,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">9 $</div>
+                        <div class="products-item-price" data-base-price="9">9 $</div>
                         <div class="products-item-weight">300 g</div>
                     </div>
                     <div class="products-item-action">
@@ -365,7 +366,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">8 $</div>
+                        <div class="products-item-price" data-base-price="8">8 $</div>
                         <div class="products-item-weight">320 g</div>
                     </div>
                     <div class="products-item-action">
@@ -392,7 +393,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">9 $</div>
+                        <div class="products-item-price" data-base-price="9">9 $</div>
                         <div class="products-item-weight">360 g</div>
                     </div>
                     <div class="products-item-action">
@@ -412,7 +413,8 @@
         </div>
     </div>
 </section>
-<section class="order">
+
+<section class="order" id="order">
     <div class="container">
         <div class="order-title common-title">оформление заказа</div>
         <img src="images/order_image.png" alt="Burger in the box" class="order-image">
@@ -422,15 +424,15 @@
             </div>
             <div class="order-form-inputs">
                 <div class="order-form-input">
-                    <input type="text" placeholder="Your order">
+                    <input type="text" placeholder="Your order" id="burger">
                 </div>
                 <div class="order-form-input">
-                    <input type="text" placeholder="Your name">
+                    <input type="text" placeholder="Your name" id="name">
                 </div>
                 <div class="order-form-input">
-                    <input type="text" placeholder="Your phone number">
+                    <input type="text" placeholder="Your phone number" id="phone">
                 </div>
-                <button class="button">Оформить заказ</button>
+                <button class="button" id="order-action">Оформить заказ</button>
             </div>
         </div>
     </div>
@@ -444,5 +446,7 @@
         <div class="rights">Все права защищены</div>
     </div>
 </footer>
+
+<script src="scripts/script.js"></script>
 </body>
 </html>
